<resources>
    <string name="app_name">Just Do It</string>
    <string name="action_settings">Settings</string>
    <string name="default_task">0</string>
    <string name="tasks">Tasks</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="stop">Stop</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="choose_category">Choose Category</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="start_now">Start</string>
    <string name="save_task">Save </string>
    <string name="when_you_d_like_to_start">When you\'d like to start?</string>
    <string name="_00">00</string>
    <string name="hh">hh</string>
    <string name="min">min</string>
    <string name="enter_task_name">Task Name</string>
    <string name="enter_task_description">Task Description</string>
    <string name="start">Start</string>
    <string name="you_will_be_notified">(You will be notified)</string>
    <string name="do_u_want">Do you want ot Update Time?</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all">Delete All</string>
    <string name="invalid_time">Invalid Time Entry</string>

    <!-- spinner-->
    <string-array name="spinner">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
