<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addTask_template"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/task_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_fitness" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/enter_task_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_image" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_task_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/task_name"
        app:layout_constraintStart_toStartOf="@+id/task_name"
        app:layout_constraintTop_toBottomOf="@+id/task_name" />

    <Button
        android:id="@+id/start_now"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/fab_margin"
        android:text="@string/start_now"
        app:layout_constraintStart_toStartOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_description" />

    <Button
        android:id="@+id/save_task"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/fab_margin"
        android:text="@string/save_task"
        app:layout_constraintEnd_toEndOf="@+id/task_description"
        app:layout_constraintTop_toBottomOf="@+id/task_description" />

    <TextView
        android:id="@+id/start_time_label"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/when_you_d_like_to_start"
        app:layout_constraintEnd_toEndOf="@+id/save_task"
        app:layout_constraintStart_toStartOf="@+id/start_now"
        app:layout_constraintTop_toBottomOf="@+id/start_now" />

    <androidx.cardview.widget.CardView
        android:id="@+id/timer_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="@+id/save_task"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/start_now"
        app:layout_constraintTop_toBottomOf="@+id/notification_label">

        <LinearLayout
            android:id="@+id/time_entry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxEms="2"
                android:inputType="time"
                android:maxLines="1"
                android:layout_marginEnd="8dp"
                android:text="@string/_00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/hh"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="2"
                android:inputType="time"
                android:maxLines="1"
                android:layout_marginEnd="8dp"
                android:text="@string/_00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/min"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/time_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </Spinner>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/save_button"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save_task"
        app:layout_constraintEnd_toEndOf="@+id/no_button"
        app:layout_constraintStart_toStartOf="@+id/yes_button"
        app:layout_constraintTop_toBottomOf="@+id/yes_button" />

    <TextView
        android:id="@+id/notification_label"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/you_will_be_notified"
        app:layout_constraintEnd_toEndOf="@+id/start_time_label"
        app:layout_constraintStart_toStartOf="@+id/start_time_label"
        app:layout_constraintTop_toBottomOf="@+id/start_time_label" />

    <Button
        android:id="@+id/yes_button"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/yes"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/start_time_label"
        app:layout_constraintTop_toBottomOf="@+id/timer_card" />

    <Button
        android:id="@+id/no_button"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:layout_marginEnd="8dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="@+id/start_time_label"
        app:layout_constraintTop_toBottomOf="@+id/timer_card" />

</androidx.constraintlayout.widget.ConstraintLayout>